--- a/sass/custom/custom.scss
+++ b/sass/custom/custom.scss
@@ -69,7 +69,7 @@ header.row-fluid {
   // background-color: rgba(245, 250, 255, 0.9);
 
   border-bottom: 1px solid gray;
-  margin-top:40px;
+  margin-top:20px;
   box-shadow: 0 4px 2px -3px gray; // x-off, y-off, blur-radius, spread (neg = shrink)
   padding: 20px 3%;
 }
@@ -85,7 +85,7 @@ header.row-fluid {
   }
 
   &.affix {
-    top: 20px;
+    top: $sidebarAffixMarginTop;
     z-index:2;
   }
   &.sidebar {
@@ -237,7 +237,7 @@ footer.end-footer {
 .fixed-top {
   position:fixed;
   top:0;
-  z-index:10;
+  z-index:3;
 }
 
 .alert {
